--- a/_publications/1_2019-icics.md
+++ b/_publications/1_2019-icics.md
@@ -1,9 +1,9 @@
 ---
 title: "Privacy-Preserving Distributed Machine Learning Based on Secret Sharing"
 collection: publications
-permalink: /publication/2019-icics
+permalink: /publication/1_2019-icics
 date: 2019-12-15
-venue: '21st International Conference on Information and Communications Security'
+venue: 'International Conference on Information and Communications Security'
 paperurl: 'https://link.springer.com/chapter/10.1007/978-3-030-41579-2_40'
 ---
-Authors: **Ye Dong**, Xiaojun Chen, Liyan Shen, Dakui Wang
+Authors: **Ye Dong**, Xiaojun Chen, Liyan Shen, and Dakui Wang
