--- a/_posts/2021-07-31-blog-post-1.md
+++ b/_posts/2021-07-31-blog-post-1.md
@@ -1,7 +1,7 @@
 ---
 title: 'ABY & ABY2.0'
 date: 2021-07-31
-permalink: /posts/20210731-ABY&ABY2.0
+permalink: /posts/2021/07/blog-post-1/
 tags:
   - MPC
   - Secret Sharing
