--- a/_posts/2021-08-07-blog-post-1.md
+++ b/_posts/2021-08-07-blog-post-1.md
@@ -57,12 +57,12 @@ $$
 #### 2.1.1 Integer-VDP
 
 在计算的第一层，由于用户上传的数据是多比特的整数（不是 $\{-1,1\}$ ），因此需要对第一层的计算额外考虑。XONN使用OT设计协议Oblivious Conditional Addition Protocol (OCA) 来实现该层的计算。注意，为了和原文保持一致，此处使用 ${v}_2$ 和 ${v}_1$ 分别表示服务器的模型 ${w}$ 和客户端输入样本 ${x}$ 。
-对于服务器端的持有选择比特向量 ${v}_2$ ，客户端持有输入向量 $v_1$ 。假设 ${v}_1$ 中的每个数据都是 $b$ 比特，客户端首先对持有的数据进行比特拉伸 $b\rightarrow b'$ ，其中 $b'=\lceil log_2(n\cdot (2^b -1))\rceil$ ， $|v_1|=n$ 。拉伸之后得到 $v_1*$ 。进一步，求拉伸之后的数据的二位最高有效位补码 (two's complement) 得到 $\bar{v_1*}$ 。随机生成向量 ${r}$ 。对于每一个数，客户端发送 $(\bar{ v_1* }[i]-{r}[i], v_1*[i]-{r}[i])$ 而服务器输入 $v_2[i]$ 作为选择比特：如果 $v_2[i]=0$ （真实值 $=-1$ ）则获得 $\bar{v_1*}[i]-{r}[i]$ ，否则获得 $v_1*[i]-{r}[i]$ ​​。公式表示如下：
+对于服务器端的持有选择比特向量 ${v}_2$ ，客户端持有输入向量 $v_1$ 。假设 ${v}_1$ 中的每个数据都是 $b$ 比特，客户端首先对持有的数据进行比特拉伸 $b\rightarrow b'$ ，其中 $b'=\lceil log_2(n\cdot (2^b -1))\rceil$ ， $|v_1|=n$ 。拉伸之后得到 $v_1^{\ast}$ 。进一步，求拉伸之后的数据的二位最高有效位补码 (two's complement) 得到 $\bar{v_1^{\ast}}$ 。随机生成向量 ${r}$ 。对于每一个数，客户端发送 $(\bar{ v_1^{\ast} }[i]-{r}[i], v_1^{\ast}[i]-{r}[i])$ 而服务器输入 $v_2[i]$ 作为选择比特：如果 $v_2[i]=0$ （真实值 $=-1$ ）则获得 $\bar{v_1^{\ast}}[i]-{r}[i]$ ，否则获得 $v_1^{\ast}[i]-{r}[i]$ ​​。公式表示如下：
 
 $$
 v_t[i] = \begin{cases}
-\bar{v_1*}[i]-{r}[i] \mod{2^{b'}}, & v_2[i]=0\\
-v_1*[i]-{r}[i] \mod{2^{b'}}, & v_2[i]=1
+\bar{v_1^{\ast}}[i]-{r}[i] \mod{2^{b'}}, & v_2[i]=0\\
+v_1^{\ast}[i]-{r}[i] \mod{2^{b'}}, & v_2[i]=1
 \end{cases}
 $$
 
