--- a/_posts/2021-08-23-blog-post-2.md
+++ b/_posts/2021-08-23-blog-post-2.md
@@ -46,6 +46,7 @@ tags:
   - $\langle x\rangle \pm c:= (x_1\pm c, x_2, x_3)$​;
   - $\langle cx\rangle:=(cx_1, cx_2, cx_3)$​;
   - 处理三方分享下的乘法先本地计算交叉项后，为保持形式的统一需要进行re-sharing的过程（将$z_i$发送给$P_{i+1}$）
+
     $$
     \begin{aligned}\langle xy\rangle &=(x_1+x_2+x_3)(y_1+y_2+y_3)\\&=(x_1y_1+x_1y_2+x_1y_3):P_1\to z_1\\&+(x_2y_2+x_2y_3+x_3y_2):P_2\to z_2\\&+(x_3y_3+x_3y_1+x_1y_3):P_3\to z_3\end{aligned}
     $$
@@ -70,7 +71,7 @@ tags:
 
 ### 这种方式存在两个问题
 1. 精确性问题：1）截断直接抹掉了第d位处的进位；2）如果$\langle \tilde{x}\rangle$​的分享值最高符号位与原数的最高符号位不一致（比如一个负数其秘密分享后最高符号位可能都是0，那么截断后前面$d+1$​位均是0）那么会导致还原错误；
-2. 针对上述问题，可以限制$|x^{'}|< 2^l \ll 2^k$​，但是不能扩展到3-PC的情况。
+2. 针对上述问题，可以限制 $|x'|< 2^\ell \ll 2^k$​，但是不能扩展到3-PC的情况。
 
 #### 基于三方的截断方法一$\Pi_{trunc1}$
 令每方有$\langle x^{'}\rangle=\langle y\rangle \langle z\rangle$​的2-out-of-3分享份额，现在的目标是计算截断$\langle x\rangle = \langle x^{'} /2^d\rangle $​（转为两方的设置下来做）。
@@ -83,7 +84,7 @@ tags:
 
 2. 定义$\langle x\rangle := (x^{'} - r^{'}) / 2^d + \langle r\rangle$，因为这里$\langle r\rangle = \langle r^{'} / 2^d\rangle$
 
-  ![](/images/ABY3Fig/trunc2.png)
+![](/images/ABY3Fig/trunc2.png)
 
 ### Vectorized Multiplication
 
@@ -96,9 +97,11 @@ $$\langle \overrightarrow{x}\rangle \cdot \langle \overrightarrow{y}\rangle :=\m
 ### Malicious Multiplication
 
 Semi-honest 模型下的截断乘法如前所述。但是在malicious 模型下，需要验证正确性。本文采用了Triple Verif. Using Another Without Opening 技术。简单来说，为了在线验证$z=xy$​​，预计算阶段生成三元组$c=ab$​​，方案如下图。关于如何保证$c=ab$​​，则需要使用cut-and-choose技术。
+
 ![](/images/ABY3Fig/malicious-mult.jpg)
 
 而结合本文的截断技术2，可以给出面向定点数的malicious安全模型下的乘法如下：
+
 ![](/images/ABY3Fig/fixed-malicious-mult.jpg)
 
 ## Share Conversions
@@ -126,7 +129,7 @@ $P_1$ 是 Evaluator，拥有$k_X^x$，而$P_2, P_3$作为Garbler拥有$k_X^0\in 
 - 使用Joint Yao Input直接对$\langle x\rangle^B$​进行Yao's 秘密分享，并对分享在Yao sharing下做加法。
 
 ### Yao to Arithmetic  
-- 通过Yao's circuit 3PC来计算一个加法计算出$\langle x\rangle^Y$，首先Parties 1,2采样$x_2\leftarrow \mathbb{Z}_{2^k}$，Parties 2,3采样$x_3\leftarrow \mathbb{Z}_{2^k}$，然后使用Yao's circuit来计算$\langle x_1\rangle^Y = \langle x\rangle^Y - \langle x_2\rangle^Y - \langle x_3\rangle^Y$。最后就得到了$\langle x\rangle^A = (x_1, x_2, x_3)$
+- 通过Yao's circuit 下的3PC来计算一个加法电路计算出 $\langle x\rangle^Y$，首先Parties 1,2 采样 $x_2 \leftarrow \mathbb{Z}_{2^k}$，Parties 2,3 采样 $x_3 \leftarrow \mathbb{Z}_{2^k}$，然后使用Yao's circuit来计算 $\langle x_1 \rangle^Y = \langle x \rangle^Y - \langle x_2 \rangle^Y - \langle x_3 \rangle^Y$。最后就得到了 $\langle x\rangle^A = (x_1, x_2, x_3)$。
 
 ### Arithmetic to Yao 
 - 直接将$\langle x_i\rangle^Y$使用joint input 转化为$\langle x_i\rangle^Y$，然后在Yao's Circuit下做加法$\langle x\rangle^Y=\langle x_1\rangle^Y+ \langle x_2\rangle^Y+\langle x_3\rangle^Y$。
@@ -171,7 +174,9 @@ $P_1$ 是 Evaluator，拥有$k_X^x$，而$P_2, P_3$作为Garbler拥有$k_X^0\in 
 
 ![](/images/ABY3Fig/linear.jpg)
 
+
 ![](/images/ABY3Fig/log.jpg)
+
 
 ![](/images/ABY3Fig/inference.jpg)
 
@@ -179,4 +184,4 @@ $P_1$ 是 Evaluator，拥有$k_X^x$，而$P_2, P_3$作为Garbler拥有$k_X^0\in 
 
 ABY3在三方下实现了Arithmetic，Binary，和Yao分享之间的转化，并实现了相关的机器学习计算算子。更重要的，这是比较早的几篇面向恶意敌手的隐私保护机器学习高效方案。
 
-本篇工作由酸菜鱼和李开运合作完成。
+本篇工作和李开运合作完成。
