--- a/_posts/2021-08-23-blog-post-2.md
+++ b/_posts/2021-08-23-blog-post-2.md
@@ -71,7 +71,7 @@ tags:
 
 ### 这种方式存在两个问题
 1. 精确性问题：1）截断直接抹掉了第d位处的进位；2）如果$\langle \tilde{x}\rangle$​的分享值最高符号位与原数的最高符号位不一致（比如一个负数其秘密分享后最高符号位可能都是0，那么截断后前面$d+1$​位均是0）那么会导致还原错误；
-2. 针对上述问题，可以限制 $|x'|< 2^\ell \ll 2^k$​，但是不能扩展到3-PC的情况。
+2. 针对上述问题，可以限制 $\| x^{'} \|< 2^\ell \ll 2^k$​，但是不能扩展到3-PC的情况。
 
 #### 基于三方的截断方法一$\Pi_{trunc1}$
 令每方有$\langle x^{'}\rangle=\langle y\rangle \langle z\rangle$​的2-out-of-3分享份额，现在的目标是计算截断$\langle x\rangle = \langle x^{'} /2^d\rangle $​（转为两方的设置下来做）。
@@ -84,7 +84,7 @@ tags:
 
 2. 定义$\langle x\rangle := (x^{'} - r^{'}) / 2^d + \langle r\rangle$，因为这里$\langle r\rangle = \langle r^{'} / 2^d\rangle$
 
-![](/images/ABY3Fig/trunc2.png)
+![](/images/ABY3Fig/trunc2.jpg)
 
 ### Vectorized Multiplication
 
