--- a/_posts/2021-08-23-blog-post-2.md
+++ b/_posts/2021-08-23-blog-post-2.md
@@ -129,7 +129,7 @@ $P_1$ 是 Evaluator，拥有$k_X^x$，而$P_2, P_3$作为Garbler拥有$k_X^0\in 
 - 使用Joint Yao Input直接对$\langle x\rangle^B$​进行Yao's 秘密分享，并对分享在Yao sharing下做加法。
 
 ### Yao to Arithmetic  
-- 通过Yao's circuit 下的3PC来计算一个加法电路计算出 $\langle x\rangle^Y$，首先Parties 1,2 采样 $x_2 \leftarrow \mathbb{Z}_{2^k}$，Parties 2,3 采样 $x_3 \leftarrow \mathbb{Z}_{2^k}$，然后使用Yao's circuit来计算 $\langle x_1 \rangle^Y = \langle x \rangle^Y - \langle x_2 \rangle^Y - \langle x_3 \rangle^Y$。最后就得到了 $\langle x\rangle^A = (x_1, x_2, x_3)$。
+- 通过Yao's circuit 下的3PC来计算一个加法电路计算出 $\langle x\rangle^Y$，首先Parties 1,2 采样 $x_2$，Parties 2,3 采样 $x_3$，然后使用Yao's circuit来计算 $\langle x_1 \rangle^Y = \langle x \rangle^Y - \langle x_2 \rangle^Y - \langle x_3 \rangle^Y$。最后就得到了 $\langle x\rangle^A = (x_1, x_2, x_3)$。
 
 ### Arithmetic to Yao 
 - 直接将$\langle x_i\rangle^Y$使用joint input 转化为$\langle x_i\rangle^Y$，然后在Yao's Circuit下做加法$\langle x\rangle^Y=\langle x_1\rangle^Y+ \langle x_2\rangle^Y+\langle x_3\rangle^Y$。
@@ -184,4 +184,4 @@ $P_1$ 是 Evaluator，拥有$k_X^x$，而$P_2, P_3$作为Garbler拥有$k_X^0\in 
 
 ABY3在三方下实现了Arithmetic，Binary，和Yao分享之间的转化，并实现了相关的机器学习计算算子。更重要的，这是比较早的几篇面向恶意敌手的隐私保护机器学习高效方案。
 
-本篇工作和李开运合作完成。
+本篇工作和[李开运](https://github.com/karry520)合作完成。
