--- a/_posts/2021-08-23-blog-post-2.md
+++ b/_posts/2021-08-23-blog-post-2.md
@@ -123,7 +123,7 @@ $P_1$ 是 Evaluator，拥有$k_X^x$，而$P_2, P_3$作为Garbler拥有$k_X^0\in 
 
 ### Yao to Binary
 - 半诚实下使用Yao's share中key的$p_x = k_X^0[0]$​​​（permutation bit），符合Binary share的定义，因此取$\langle x\rangle^B = (x\oplus p_x\oplus r, r, p_x)$​​；​
-- 在恶意模型下，则需要验证$x\oplus p_x\oplus r$​中的$p_x=k_X^0[0]$​。这个过程需要使用承诺技术。
+- 在恶意模型下，则需要验证$x\oplus p_x\oplus r$​中的$p_x=k_X^0[0]$​。这个过程需要使用承诺技术。具体来说，$P_1$ 和 $P_2$ 选择 $k_r^r$, 其中 $P_2$ 将 $k_r^0 = k_r^r \oplus (r\Delta)$ 发送给 $P_3$。而 $P_2$ 和 $P_3$ 则分别将 $C_0 =Comm(k_y^{p_x})$ 和 $C_1 =Comm(k_y^{p_x})$ 发送给 $P_1$，其中 $k_y^0 = k_x^0 \oplus k_r^0$。$P_1$ 发送 $k_y^{x\oplus r} = k_{X}^x \oplus k_r^r$ 给 $P_3$, $P_3$ 验证 $k_y^{x\oplus r} \in \{k_y^0, k_y^1\}$。 并且 $P_1$ 验证 $C_{p_x\oplus x\oplus r}$ 是 $k_y^{x\oplus r}$ 的承诺，而且 $C_0=C_1$。最终，$\langle x\rangle^B = (x\oplus p_x\oplus r, r, p_x)$​​，且 $P_3$ 可以在本地计算 $x\oplus p_x \oplus r = k_y^{x\oplus r}[0]\oplus p_r$。
 
 ### Binary to Yao 
 - 使用Joint Yao Input直接对$\langle x\rangle^B$​进行Yao's 秘密分享，并对分享在Yao sharing下做加法。
