--- a/_posts/2021-09-19-blog-post-2.md
+++ b/_posts/2021-09-19-blog-post-2.md
@@ -31,7 +31,7 @@ tags:
 
   - $\sigma_x$​被$[\cdot]$​-sharing分享在参与方$\rm E = \{E_1,E_2\}$​之间，即$[\sigma_x]_{\rm E_1}=\sigma_x^1$​，$[\sigma_x]_{\rm E_2}=\sigma_x^2$​。而参与方$\rm V=\{V_1, V_2\}$​则都持有$\sigma_x^1$​和$\sigma_x^2$​；
 
-  - 类似的，$\mu_x$​ 被$[\cdot]$​-sharing 分享在$\rm V=\{V_1,V_2\}$​之间，即$[\mu_x]_{{\rm V}_1}=\mu_x^1$​，$[\mu_x]_{{\rm V}_2}=\mu_x^2$​。而$\rm E=\{E_1, E_2\}$​则都持有$\mu_x^1$​和$\mu_x^2$​。整体的语义分享如下：​​
+  - 类似的，$\mu_x$​ 被$[\cdot]$​-sharing 分享在$\rm V=\{V_1,V_2\}$​之间，即$[\mu_x]_{\rm V_1}=\mu_x^1$​，$[\mu_x]_{\rm V_2}=\mu_x^2$​。而$\rm E=\{E_1, E_2\}$​则都持有$\mu_x^1$​和$\mu_x^2$​。整体的语义分享如下：​​
 
     | $\rm E_1$：$[\![x]\!]_{\rm E_1}=(\sigma_x^1, \mu_x^1, \mu_x^2)$ | $\rm V_1$：$[\![x]\!]_{\rm V_1}=(\sigma_x^1, \sigma_x^2, \mu_x^1)$ |
     | ------------------------------------------------------------ | ------------------------------------------------------------ |
