--- a/_posts/2021-09-26-blog-post-1.md
+++ b/_posts/2021-09-26-blog-post-1.md
@@ -28,15 +28,15 @@ tags:
 
 ### 1.1 Zero Extension (ZExt)
 
-对于无符号数，需要进行 0-拓展（Zero Extension）：$y = {\rm ZExt}(x, m, n)\in \mathbb{Z}_N$​。即两方（$P_0$​和$P_1$​）以秘密分享的形式输入$\langle x\rangle^m$​，协议输出结果为$\langle y\rangle^n$​，满足${\rm uint}(y)={\rm uint}(x)$​，其中${\rm uint}(x)$​表示$x$​在$\mathbb{Z}$​​下的值。
+对于无符号数，需要进行 0-拓展（Zero Extension）：$y = {\rm ZExt}(x, m, n)\in \mathbb{Z}_N$​ 。即两方（$P_0$​ 和 $P_1$​）以秘密分享的形式输入 $\langle x\rangle^m$​ ，协议输出结果为 $\langle y\rangle^n$​ ，满足 ${\rm uint}(y)={\rm uint}(x)$​ ，其中 ${\rm uint}(x)$​ 表示$x$​在$\mathbb{Z}$​​下的值。
 
-对于$\langle x\rangle^m\in \mathbb{Z}_M$，在$\mathbb{Z}$下有
+对于$\langle x\rangle^m\in \mathbb{Z}_M$ ，在$\mathbb{Z}$下有
 $$
 x = \langle x\rangle^m_0 + \langle x\rangle^m_1 - w\cdot M \tag1
 $$
 其中，$w=(\langle x\rangle^m_0 + \langle x\rangle^m_1 \ge M)$，而$\langle x\rangle^m_0 + \langle x\rangle^m_1 \ge M$可表示为${\rm wrap}(\langle x\rangle^m_0, \langle x\rangle^m_1, M)$。
 
-$\langle x\rangle^m_b$都可以在本地从$\mathbb{Z}_M$z转化到$\mathbb{Z}_N$，而对于$w\cdot M$，则涉及到$w$。首先，${\rm ZExt}$调用 $\mathcal{F}_{\rm wrap}^{m}(\langle x\rangle^m_0, \langle x\rangle^m_1)$返回$w$的Boolean-shares。又因为$N / M = 2^{n-m}$，所以可以调用$\mathbb{F}_{\rm B2A}^{n-m}(\langle w\rangle^B)$将$\langle w\rangle^B$转化到环$\mathbb{Z}_{2^{n-m}}$上即可。这样处理，在$\mathbb{Z}$上则有
+$\langle x\rangle^m_b$ 都可以在本地从 $\mathbb{Z}_M$ 转化到 $\mathbb{Z}_N$ ，而对于 $w\cdot M$ ，则涉及到 $w$ 。首先，${\rm ZExt}$调用 $\mathcal{F}_{\rm wrap}^{m}(\langle x\rangle^m_0, \langle x\rangle^m_1)$返回$w$的Boolean-shares。又因为$N / M = 2^{n-m}$ ，所以可以调用 $\mathbb{F}_{\rm B2A}^{n-m}(\langle w\rangle^B)$ 将 $\langle w\rangle^B$ 转化到环 $\mathbb{Z}_{2^{n-m}}$ 上即可。这样处理，在 $\mathbb{Z}$ 上则有
 $$
 w = \langle w\rangle^{n-m}_0 + \langle w\rangle^{n-m}_1 - 2^{n-m}\cdot {\rm wrap}(\langle w\rangle^{n-m}_0, \langle w\rangle^{n-m}_1, 2^{n-m})
 $$
@@ -70,7 +70,7 @@ $$
 
 ## 2. Truncation
 
-对于环$\mathbb{Z}_L$内表示的无符号数和有符号数，首先分别考虑两种右移（Right Shift）：逻辑右移（Logical Right Shift，$\gg_L$）和算术右移（Arithmetic Right Shift，$\gg_A$）。在此基础上，构造截断并缩减（Truncate & Reduce $x$ by $s$-bits，${\rm TR}(x, s)$），即截断$x\in \mathbb{Z}_L$的末$s$-bits并使得截断结果在环$\mathbb{Z}_{2^{\ell - s}}$种。最后，构造了除数为$2^m$的除法。
+对于环$\mathbb{Z}_L$内表示的无符号数和有符号数，首先分别考虑两种右移（Right Shift）：逻辑右移（Logical Right Shift，$\gg_L$）和算术右移（Arithmetic Right Shift，$\gg_A$）。在此基础上，构造截断并缩减（Truncate & Reduce $x$ by $s$-bits，${\rm TR}(x, s)$），即截断$x\in \mathbb{Z}_L$ 的末 $s$-bits并使得截断结果在环$\mathbb{Z}_{2^{\ell - s}}$种。最后，构造了除数为$2^m$的除法。
 
 ### 2.1 Logical Right Shift
 
@@ -128,14 +128,14 @@ $\mathcal{F}_{DivPow2}^{\ell,s}(x)$​对于输入$x$​，计算$\langle z\rang
 
 ### 3.1 Unsigned Multiplication $\mathcal{F}^{m,n}_{\rm UMult}$​​
 
-$\mathcal{F}^{m,n}_{\rm UMult}$输入两个位宽不一致的无符号整数$\langle x\rangle^m$和$\langle y\rangle^n$，计算输出$\langle z\rangle^\ell$满足$z= x*_\ell y$且$\ell = m + n$。之前的工作都集中在$\ell=m=n$的情况。一种简单的处理方法是先对$x$和$y$做拓展（都拓展到$\ell$-bits），然后再做乘法。本文的方法比这种简单的方法高效$1.5\times$。对于$x$和$y$，在$\mathbb{Z}$上有
+$\mathcal{F}^{m,n}_{\rm UMult}$ 输入两个位宽不一致的无符号整数 $\langle x\rangle^m$和$\langle y\rangle^n$ ，计算输出 $\langle z\rangle^\ell$ 满足 $z= x*_\ell y$且$\ell = m + n$ 。之前的工作都集中在 $\ell=m=n$ 的情况。一种简单的处理方法是先对$x$和$y$做拓展（都拓展到$\ell$-bits），然后再做乘法。本文的方法比这种简单的方法高效$1.5\times$。对于$x$和$y$，在$\mathbb{Z}$上有
 $$
 \begin{split}
 {\rm uint}(x)\cdot {\rm uint}(y) &= (x_0 + x_1 - 2^m w_x) \cdot (y_0 + y_1 - 2^n w_y)\\
 &= x_0y_0 + x_1y_1 + x_0y_1 + x_1y_0-2^mw_xy - 2^nw_yx + 2^{\ell}w_xw_y
 \end{split}
 $$
-其中，$x_by_b$​可以在$P_b$​本地计算，$2^{\ell}w_xw_y$​在$\mod{L}$​下自动消除。而$w_xy$​和$w_yx$​可以通过$\mathcal{F}_{\rm MUX}$​计算，且$w_x$​和$w_y$​可以通过$\rm wrap$​计算。关键难点在于计算$x_by_{1-b}$​。对于$x_b y_{1-b}$​​的计算，本文利用$\rm COT$​构造了类似计算Beaver三元组中交叉项的方法 $\mathcal{F}^{m,n}_{\rm CrossTerm}: \mathbb{Z}_M \times \mathbb{Z}_N\rightarrow \mathbb{Z}_L \times \mathbb{Z}_L$​ 。不同的是，在计算$x_by_{1-b}$​的时候，令数据比特位短的一方作为Receiver而数据比特位长的一方作为Sender。不妨令$m<n$​，则$P_b$​作为Receiver，其中$x_b$​的每一比特作为每次COT的选择比特，而$P_{1-b}$​输入$y_{1-b}$​的末尾$\ell-i$​比特作为第$i$​次$\rm COT_{\ell -i}$​的输入。实现$\mathcal{F}^{m,n}_{\rm CrossTerm}$​的协议如下：
+其中，$x_by_b$​可以在$P_b$​本地计算，$2^{\ell}w_xw_y$​在$\mod{L}$​下自动消除。而$w_xy$​和$w_yx$​可以通过$\mathcal{F}_{\rm MUX}$​计算，且$w_x$​和$w_y$​可以通过$\rm wrap$​计算。关键难点在于计算$x_by_{1-b}$​。对于$x_b y_{1-b}$​​的计算，本文利用$\rm COT$​构造了类似计算Beaver三元组中交叉项的方法 $\mathcal{F}^{m,n}_{\rm CrossTerm}: \mathbb{Z}_M \times \mathbb{Z}_N\rightarrow \mathbb{Z}_L \times \mathbb{Z}_L$​ 。不同的是，在计算$x_by_{1-b}$​的时候，令数据比特位短的一方作为Receiver而数据比特位长的一方作为Sender。不妨令 $m<n$​ ，则 $P_b$ ​作为Receiver，其中$x_b$​的每一比特作为每次COT的选择比特，而 $P_{1-b}$ ​输入 $y_{1-b}$ ​的末尾 $\ell-i$ ​比特作为第 $i$ ​次 $\rm COT_{\ell -i}$ ​的输入。实现 $\mathcal{F}^{m,n}_{\rm CrossTerm}$​ 的协议如下：
 
 ![](/images/SIRNNFig/CrossTerm.jpg)
 
@@ -159,7 +159,7 @@ $$
 
 ### 3.3 Matrix Multiplication and Convolutions
 
-对于矩阵乘法和卷积（卷积可以展开为矩阵乘法）$AB$，其中$A\in \mathbb{Z}_M^{d_1\times d_2}$，$B\in \mathbb{Z}_N^{d_2\times d_3}$，可以首先调用 $\mathcal{F}^{m,n}_{\rm UMult}$或者$\mathcal{F}^{m,n}_{\rm SMult}$，然后进行$d_2$次加法。但是在$\mathbb{Z}_{L}$$L=2^{\ell}, \ell=m+n$内执行加法会造成溢出。为了防止溢出，需要将数据额外拓展$e=\lceil \log d_2\rceil$-bits 。简单的直接将所有element-wise相乘的中间结果拓展需要进行$d_1 d_2 d_3$次拓展。为了减少开销，在进行$\mathcal{F}_{\rm CrossTerm}$的计算的时候，将比特位长的一方数据拓展$e$-bits，如此则在不增加开销的条件下将中间结果自然拓展到$\mathbb{Z}_{2^{m+n+e}}$上，防止溢出。具体协议如下。
+对于矩阵乘法和卷积（卷积可以展开为矩阵乘法）$AB$，其中$A\in \mathbb{Z}_M^{d_1\times d_2}$，$B\in \mathbb{Z}_N^{d_2\times d_3}$，可以首先调用 $\mathcal{F}^{m,n}_{\rm UMult}$或者$\mathcal{F}^{m,n}_{\rm SMult}$，然后进行$d_2$次加法。但是在$\mathbb{Z}_{L}$$L=2^{\ell}, \ell=m+n$内执行加法会造成溢出。为了防止溢出，需要将数据额外拓展 $e=\lceil \log d_2\rceil$-bits 。简单的直接将所有element-wise相乘的中间结果拓展需要进行$d_1 d_2 d_3$次拓展。为了减少开销，在进行 $\mathcal{F}_{\rm CrossTerm}$ 的计算的时候，将比特位长的一方数据拓展$e$-bits，如此则在不增加开销的条件下将中间结果自然拓展到$\mathbb{Z}_{2^{m+n+e}}$上，防止溢出。具体协议如下。
 
 ![](/images/SIRNNFig/MatMult.png)
 
@@ -171,7 +171,7 @@ $\mathcal{F}_{\rm SMultTR}^{m,n,\ell,s}$首先调用$\mathcal{F}_{\rm SMult}^{m,
 
 ### 4.1 Digit Decomposition 
 
-$\mathcal{F}_{\rm DigDec}^{\ell, \{d_i\}_{i\in [c]}}$​将$\ell$​-bit的$\langle x\rangle^\ell$​分解为$c$​个子串$\langle z_{c-1}\rangle^{d_{c-1}},...,\langle d_0\rangle^{d_0}$​，其中$z_i$​的长度为$d_i$​，满足$x=z_{c-1}||...||z_0$​。首先考虑$ d\mid \ell$​​ 的情况，此时分解结果为$c=\ell/d$个长度均为$d$的子串。对于每一个$z_i$​，需要额外计算其后低位的串对其的进位（carry）。具体来说，对$\langle x\rangle^\ell_b = y_{b,c-1}||...||y_{b,0}$，其中$y_{b,i}\in \{0,1\}^d$，$i\in [c]$。令$Y_{b,i}= y_{b,i}||...||y_{b,0}$。那么$z_i = y_{0,i}+y_{1,i}+carry_i \mod{2^d}$，其中 $carry_i = Y_{0,i-1} + Y_{1,i-1} \ge 2^{id}$。利用$\rm wrap$计算$carry_i$，并递归利用引理 1，可以计算得到所有的$z_i$。
+$\mathcal{F}_{\rm DigDec}^{\ell, \{d_i\}_{i\in [c]}}$​ 将$\ell$​-bit的 $\langle x\rangle^\ell$​ 分解为$c$​个子串 $\langle z_{c-1}\rangle^{d_{c-1}},...,\langle d_0\rangle^{d_0}$​ ，其中$z_i$​的长度为$d_i$​，满足 $x=z_{c-1}||...||z_0$​ 。首先考虑$ d\mid \ell$​​ 的情况，此时分解结果为$c=\ell/d$个长度均为$d$的子串。对于每一个$z_i$​，需要额外计算其后低位的串对其的进位（carry）。具体来说，对$\langle x\rangle^\ell_b = y_{b,c-1}||...||y_{b,0}$，其中$y_{b,i}\in \{0,1\}^d$，$i\in [c]$。令$Y_{b,i}= y_{b,i}||...||y_{b,0}$。那么$z_i = y_{0,i}+y_{1,i}+carry_i \mod{2^d}$，其中 $carry_i = Y_{0,i-1} + Y_{1,i-1} \ge 2^{id}$。利用$\rm wrap$计算$carry_i$，并递归利用引理 1，可以计算得到所有的$z_i$。
 
 ![](/images/SIRNNFig/DigDec.jpg)
 
@@ -185,7 +185,7 @@ $\mathcal{F}_{\rm DigDec}^{\ell, \{d_i\}_{i\in [c]}}$​将$\ell$​-bit的$\lan
 
 ![](/images/SIRNNFig/MSNZB.jpg)
 
-其中 $\mathcal{F}^{d,\ell,i}_{\rm MSNZB-P}$和$\mathcal{F}_{\rm Zeros}^d$都是用LUTs（$d$-bits输入）实现的。又因为这两部分输入相同（均为$\langle y_i\rangle^d$），可以构造同一个LUT，其输入每一项为$(u_i || v_i)$。而$\mathcal{F}^{\ell}_{\rm One-Hot}(\langle \widetilde{z}\rangle^\iota)$也可以使用LUT实现，其中每一项为$\ell$-bit，输入为$\iota$-bits。
+其中 $\mathcal{F}^{d,\ell,i}_{\rm MSNZB-P}$和$\mathcal{F}_{\rm Zeros}^d$ 都是用LUTs（$d$-bits输入）实现的。又因为这两部分输入相同（均为$\langle y_i\rangle^d$），可以构造同一个LUT，其输入每一项为$(u_i || v_i)$。而$\mathcal{F}^{\ell}_{\rm One-Hot}(\langle \widetilde{z}\rangle^\iota)$也可以使用LUT实现，其中每一项为$\ell$-bit，输入为$\iota$-bits。
 
 ## 5. MSB-to-Wrap Optimization
 
@@ -195,7 +195,7 @@ $\mathcal{F}_{\rm DigDec}^{\ell, \{d_i\}_{i\in [c]}}$​将$\ell$​-bit的$\lan
 
 ### 6.1 Exponential
 
-$\mathcal{F}^{m,s,n,s'}_{\rm rExp}$计算${\rm rExp}(z)=e^{-z}, z\in \mathbb{R}^+$。对于该函数，本文还是使用分段逼近的思想，不同点在于对于本文每一段穷举在预设精度下的所有${\rm rExp}(z)$的值，然后使用LUT选择出所需要的一项。具体来说，首先调用$\mathcal{F}_{\rm DigDec}^{\ell, \{d_i\}_{i\in [c]}}$对$x$做分解，得到${\rm rExp}(srt_{m,s}(x)) = {\rm rExp}(2^{d(k-1)-s}x_{k-1})\cdot ... \cdot {\rm rExp}(2^{-s}x_0)$，进一步对每一项穷举所有值做成一个LUT：$L_i(j)={\rm Fix}({\rm rExp}(2^{di-s}j, s'+2, s))$；然后选取$L_i[x_i]$，最后计算相乘计算结果。具体如下：
+$\mathcal{F}^{m,s,n,s'}_{\rm rExp}$计算${\rm rExp}(z)=e^{-z}, z\in \mathbb{R}^+$ 。对于该函数，本文还是使用分段逼近的思想，不同点在于对于本文每一段穷举在预设精度下的所有${\rm rExp}(z)$的值，然后使用LUT选择出所需要的一项。具体来说，首先调用$\mathcal{F}_{\rm DigDec}^{\ell, \{d_i\}_{i\in [c]}}$对$x$做分解，得到${\rm rExp}(srt_{m,s}(x)) = {\rm rExp}(2^{d(k-1)-s}x_{k-1})\cdot ... \cdot {\rm rExp}(2^{-s}x_0)$，进一步对每一项穷举所有值做成一个LUT：$L_i(j)={\rm Fix}({\rm rExp}(2^{di-s}j, s'+2, s))$；然后选取$L_i[x_i]$，最后计算相乘计算结果。具体如下：
 
 ![](/images/SIRNNFig/rexp.jpg)
 
@@ -254,4 +254,5 @@ $\mathcal{F}_{\rm rsqrt}(\ell, s, \ell, s')$​计算 ${\rm rsqrt}(x)=\frac{1}{\
 ## 参考文献
 
 [1] M. Ito, N. Takagi, and S. Yajima, “Efficient Initial Approximation for Multiplicative Division and Square Root by a Multiplication with Operand Modification,” IEEE Transactions on Computers, 1997.
+
 [2] Keller M, Sun K. Secure Quantized Training for Deep Learning[J]. arXiv preprint arXiv:2107.00501, 2021.
