--- a/_posts/2021-09-26-blog-post-1.md
+++ b/_posts/2021-09-26-blog-post-1.md
@@ -70,7 +70,7 @@ $$
 1. $x<2^{m-1}$​：则有 $x+2^{m-1}<M$ ​，从而在$\mathbb{Z}$​上有 $x' = x + 2^{m-1}$​​ 。进一步，则有${\rm int}(x) = x = {\rm uint}(x')- 2^{m-1}$​；
 2. $x\ge 2^{m-1}$​：则有$x+2^{m-1}\ge M$​，从而在$\mathbb{Z}$​上有 $x' = x + 2^{m-1} - 2^{m} = x - 2^{m-1}$。进一步，又因为${\rm int}(x) = x - 2^m = (x - 2^{m-1}) - 2^{m-1} =  x' - 2^{m-1}$，所以也可得在$\mathbb{Z}$上有 ${\rm int}(x) = {\rm uint}(x')-2^{m-1}$​。
 
-故，${\rm SExt}(x, m, n) = {\rm ZExt}(x, m, n)- 2^{m-1}$。
+故，${\rm SExt}(x, m, n) = {\rm ZExt}(x', m, n)- 2^{m-1}$​。
 
 ## 2. Truncation
 
@@ -84,8 +84,8 @@ x\gg_L s = u_0 + u_1 - 2^{\ell-s}\cdot {\rm wrap}(\langle x\rangle^\ell_0, \lang
 $$
 一种简单的方法是利用分别计算${\rm wrap}(\langle x\rangle^\ell_0, \langle x\rangle^\ell_1, L)$和${\rm wrap}(v_0, v_1, 2^s)$。为了减少开销，本文利用如下引理：
 
-引理 1：令$x\in \mathbb{Z}_L$​，$\langle x \rangle$​是$x$​的秘密分享，$\langle x\rangle^\ell_b = u_b || v_b$​，其中$u_b \in \{0,1\}^{\ell -s}$​，$v_b \in \{0,1\}^s$​。令$c = {\rm wrap}(v_0, v_1, 2^s)$​，$d={\rm wrap}(u_0, u_1, 2^{\ell -s})$​，$e=1\{u_0 + u_1 \mod{2^{\ell -s }}=2^{\ell -s}-1\}$​，且$w = {\rm wrap}(\langle x\rangle^\ell_0, \langle x\rangle^\ell_1, L)$​，则有$w=d\oplus(c\and e)$​​。
-证明：令$x_b = \langle x\rangle^\ell_b$，在$\mathbb{Z}$上，有$x_b = u_b \cdot 2^s, v_b$和
+引理 1：令$x\in \mathbb{Z}_L$​​，$\langle x \rangle$​​是$x$​​的秘密分享，$\langle x\rangle^\ell_b = u_b || v_b$​​，其中$u_b \in \{0,1\}^{\ell -s}$​​，$v_b \in \{0,1\}^s$​​。令$c = {\rm wrap}(v_0, v_1, 2^s)$​​，$d={\rm wrap}(u_0, u_1, 2^{\ell -s})$​​，$e=1\{u_0 + u_1 \mod{2^{\ell -s }}=2^{\ell -s}-1\}$​​，且$w = {\rm wrap}(\langle x\rangle^\ell_0, \langle x\rangle^\ell_1, L)$​​，则有$w=d\oplus(c\land e)$​​​。
+证明：令$x_b = \langle x\rangle^\ell_b$​，在$\mathbb{Z}$​上，有$x_b = u_b \cdot 2^s, v_b$​和
 $$
 \begin{split}
 x_0 + x_1 &= (v_0 + v_1) + (u_0 + u_1)\cdot2^s\\
@@ -103,9 +103,9 @@ $$
 
 根据上述两种情况，可以得出$d$和$w’$​最多有一项为1。所以，我们有
 $$
-x_0 + x_1 =  v' + (u'+c - w'\cdot 2^{\ell-s})\cdot 2^s + (d\oplus (c\and e)\cdot L
+x_0 + x_1 =  v' + (u'+c - w'\cdot 2^{\ell-s})\cdot 2^s + (d\oplus (c\land e)\cdot L
 $$
-又因为$v' <2^s$且$u'+c-w'\cdot 2^{\ell-s}< 2^{\ell-s}$，所以$ v' + (u'+c - w'\cdot 2^{\ell-s})\cdot 2^s<L$，故$w=d\oplus (c\and e)$。$\blacksquare$
+又因为$v' <2^s$​且$u'+c-w'\cdot 2^{\ell-s}< 2^{\ell-s}$​，所以$ v' + (u'+c - w'\cdot 2^{\ell-s})\cdot 2^s<L$​，故$w=d\oplus (c\land e)$​。$\blacksquare$​
 
 基于引理 1，则可以在计算$c$​​​，$e$​​​，和$d$​​​，并得到$w$​​​。而$c$​​，$e$​​，和$d$​​的计算都只涉及到$s$​​和$\ell-s$​​bits的参数，并且$d$​​和$e$​​可以同时计算（开销仅比单独计算$d$​​增加很少），因此计算量可以大大降低​整体开销。具体协议如下：
 
@@ -126,7 +126,7 @@ $\mathcal{F}_{DivPow2}^{\ell,s}(x)$​对于输入$x$​，计算$\langle z\rang
 1. 如果 $z<0$​，$z=\lceil {\rm int}(x)/2^s\rceil \mod{L}$​​；
 2. 如果 $z\ge0$​，$z=\lfloor {\rm int}(x)/2^s\rfloor \mod{L}$。
 
-对于上述两种情况，如果忽略$\lceil\cdot \rceil$​和$\lfloor \cdot\rfloor$​则Divsion by poer-of-2可以看作$\gg_A$​。而$\lceil\cdot \rceil$​和$\lfloor \cdot\rfloor$​的影响，则是使得计算结果偏向"0"。令$m_x = 1\{x\ge 2^{\ell-1}\}$​，$c=1\{x \mod{2^s}=0\}$​，则有${\rm DivPow2}(x,s)=(x\gg_A s) + m_x \and c$​。即当$m_x=1 \Leftrightarrow z<0$​，$z$​取 $\lceil \cdot \rceil$​；否则（$z\ge 0$），$z$取$\lfloor\cdot \rfloor$​​。
+对于上述两种情况，如果忽略$\lceil\cdot \rceil$​​和$\lfloor \cdot\rfloor$​​则Divsion by poer-of-2可以看作$\gg_A$​​。而$\lceil\cdot \rceil$​​和$\lfloor \cdot\rfloor$​​的影响，则是使得计算结果偏向"0"。令$m_x = 1\{x\ge 2^{\ell-1}\}$​​，$c=1\{x \mod{2^s}=0\}$​​，则有${\rm DivPow2}(x,s)=(x\gg_A s) + m_x \land c$​​。即当$m_x=1 \Leftrightarrow z<0$​​，$z$​​取 $\lceil \cdot \rceil$​​；否则（$z\ge 0$​），$z$​取$\lfloor\cdot \rfloor$​​​。
 
 ## 3. Multiplication with non-uniform bidwidths
 
