--- a/_posts/2021-09-26-blog-post-1.md
+++ b/_posts/2021-09-26-blog-post-1.md
@@ -38,7 +38,7 @@ x = \langle x\rangle^m_0 + \langle x\rangle^m_1 - w\cdot M \tag1
 $$
 其中，$w=(\langle x\rangle^m_0 + \langle x\rangle^m_1 \ge M)$，而$\langle x\rangle^m_0 + \langle x\rangle^m_1 \ge M$可表示为${\rm wrap}(\langle x\rangle^m_0, \langle x\rangle^m_1, M)$ 。
 
-$\langle x\rangle^m_b$ 都可以在本地从 $\mathbb{Z}_M$ 转化到 $\mathbb{Z}_N$ ，而对于 $w\cdot M$ ，则涉及到 $w$ 。首先，${\rm ZExt}$调用 $\mathcal{F}_{\rm wrap}^{m}(\langle x\rangle^m_0, \langle x\rangle^m_1)$返回$w$的Boolean-shares。又因为$N / M = 2^{n-m}$ ，所以可以调用 $\mathbb{F}_{\rm B2A}^{n-m}(\langle w\rangle^B)$ 将 $\langle w\rangle^B$ 转化到环 $\mathbb{Z}_{2^{n-m}}$ 上即可。这样处理，在 $\mathbb{Z}$ 上则有
+$\langle x\rangle^m_b$​ 都可以在本地从  $\mathbb{Z}_M$​  转化到 $\mathbb{Z}_N$​ ，而对于 $w\cdot M$​ ，则涉及到 $w$​ 。首先，${\rm ZExt}$​调用 $\mathcal{F}_{\rm wrap}^{m}(\langle x\rangle^m_0, \langle x\rangle^m_1)$​返回$w$​的Boolean-shares。又因为$N / M = 2^{n-m}$​ ，所以可以调用 $\mathbb{F}_{\rm B2A}^{n-m}(\langle w\rangle^B)$​ 将 $\langle w\rangle^B$​ 转化到环 $\mathbb{Z}_{2^{n-m}}$​ 上即可。这样处理，在 $\mathbb{Z}$​ 上则有
 $$
 w = \langle w\rangle^{n-m}_0 + \langle w\rangle^{n-m}_1 - 2^{n-m}\cdot {\rm wrap}(\langle w\rangle^{n-m}_0, \langle w\rangle^{n-m}_1, 2^{n-m})
 $$
