--- a/_posts/2022-01-26-blog-post-1.md
+++ b/_posts/2022-01-26-blog-post-1.md
@@ -1,3 +1,14 @@
+<head>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+            inlineMath: [['$','$']]
+            }
+        });
+    </script>
+</head>
 ---
 title: 'CryptGPU: Fast Privacy-Preserving Machine Learning on the GPU'
 date: 2022-01-26
