--- a/_posts/2022-01-26-blog-post-1.md
+++ b/_posts/2022-01-26-blog-post-1.md
@@ -9,16 +9,16 @@ tags:
   - GPU
 ---
 
-这次分享的是Sijun Tan等人发表在IEEE S&P'21的<a href=https://arxiv.org/abs/2104.10949>CryptGPU</a>。
+这次分享的是Sijun Tan等人发表在IEEE S&P'21的[CryptGPU](https://arxiv.org/abs/2104.10949)。
 
 ## Background & Motivation
 目前大多数基于安全多方计算（MPC）的隐私保护机器学习方案都是运行在CPU上的，但是在明文机器学习领域GPU已经成为一项不可缺少的硬件设备。GPU强大的算力能够大大加快机器学习模型，尤其是神经网络的计算速度。为了让MPC的隐私保护机器学习方案也能够充分利用GPU的计算性能、加快基于MPC的隐私保护机器学习训练和预测效率，本文提出了CryptGPU。
 
 本文的主要贡献在于将基于MPC的密码学协议迁移到GPU上，实现了大幅度的性能优化。然而，将MPC技术从CPU迁移到GPU会遇到一系列的挑战。虽然NVIDIA的CUDA平台能够支持一般性的计算，但是将面向CPU的代码直接运行在GPU上并不能直接带来预期的性能提升。为了实现高效的基于GPU的MPC技术，设计者必须要处理CPU和GPU之间的架构差异：
 1. 利用已有的CUDA Kkernels：第一个挑战则是现有的面向深度学习的、高度优化的CUDA kernels是面向浮点数（floating-point）计算设计的，并且这些kernels并不能直接在整数（integers）上计算。而MPC计算则主要计算在离散空间（环或者域）。为了利用现有的、高度优化的CUDA kernels，我们必须将整数计算无损地嵌入到浮点数计算中。为了解决这个问题，CryptGPU 构造了 'CUDALongTensor' 类，其能够对整数张量进行建模，并将整数计算无损的转化为对应的浮点数计算。
-2. GPU友好的密码技术：GPU的架构适合对一块数据（block）进行简单快速的计算，例如component-wise的加法和乘法。但是，GPU却对条件语句不是很友好。因此，虽然现有的GPU可以支持整数加法，但是在取素数模下做整数加法、乘法会造成大量开销（例如，对于point-wise加法40倍的差距）。因此，将密码学技术迁移到GPU上必须要考虑这些架构影响。例如，和姚氏混乱电路相比，基于向量化秘密分享的MPC协议更能发挥GPU的并行性能。进一步，为了避免模素数运算，CryptGPU采用模 $\mathbb{Z}_{2^k}$ 的环，例如 $\mathbb{Z}_{2^{64}}$。
+2. GPU友好的密码技术：GPU的架构适合对一块数据（block）进行简单快速的计算，例如component-wise的加法和乘法。但是，GPU却对条件语句不是很友好。因此，虽然现有的GPU可以支持整数加法，但是在取素数模下做整数加法、乘法会造成大量开销（例如，对于point-wise加法40倍的差距）。因此，将密码学技术迁移到GPU上必须要考虑这些架构影响。例如，和姚氏混乱电路相比，基于向量化秘密分享的MPC协议更能发挥GPU的并行性能。进一步，为了避免模素数运算，CryptGPU采用模 $\mathbb{Z}_{2^k}$ 的环，例如 $\mathbb{Z}_{2^{64}}$ 。
 
-实验显示，对于Falcon中基于CPU的线性层方案，CryptGPU可以带来25-72倍的性能提升。对于卷积操作（卷积核和数据都是秘密分享的），CryptGPU快150倍。即便是对非线性函数，例如ReLU，CryptGPU也能带来10倍的加速。最后，作者在CrypTen的技术上实现了CryptGPU并开源，<a href=https://github.com/jeffreysijuntan/CryptGPU>代码链接</a>。
+实验显示，对于Falcon中基于CPU的线性层方案，CryptGPU可以带来25-72倍的性能提升。对于卷积操作（卷积核和数据都是秘密分享的），CryptGPU快150倍。即便是对非线性函数，例如ReLU，CryptGPU也能带来10倍的加速。最后，作者在CrypTen的技术上实现了CryptGPU并开源，[链接](https://github.com/jeffreysijuntan/CryptGPU)。
 
 
 ## Systen Design and Architecture
@@ -28,7 +28,7 @@ tags:
 $
 (\mathbf{A}_0 +\mathbf{A}_1) \circ (\mathbf{B}_0+\mathbf{B}_1)= \mathbf{A}_0 \circ \mathbf{B_0} + \mathbf{A}_0 \circ \mathbf{B}_1 + \mathbf{A}_1 \circ \mathbf{B}_0 + \mathbf{A}_1 \circ \mathbf{B}_1,
 $
-其中 $\circ$ 表示任意双线性计算。假设我们将输入表示为更小的基的形式，那么有$\mathbf{A} = \mathbf{A}_0+2^{16} \mathbf{A}_1$ 和 $\mathbf{B}=\mathbf{B}_0+2^{16}\mathbf{B}_1$. 双线性保证了 $\mathbf{A}\circ \mathbf{B}$ 可以通过 $\mathbf{A}_0 \circ \mathbf{B_0}, \mathbf{A}_0 \circ \mathbf{B}_1, \mathbf{A}_1 \circ \mathbf{B}_0, \mathbf{A}_1 \circ \mathbf{B}_1$ 的线性组合来获得。线性组合的过程只涉及到 element-wise 加法和数乘。
+其中 $\circ$ 表示任意双线性计算。假设我们将输入表示为更小的基的形式，那么有$\mathbf{A} = \mathbf{A}_0+2^{16} \mathbf{A}_1$ 和 $\mathbf{B}=\mathbf{B}_0+2^{16}\mathbf{B}_1$ 。 双线性保证了 $\mathbf{A}\circ \mathbf{B}$ 可以通过 $\mathbf{A}_0 \circ \mathbf{B_0}, \mathbf{A}_0 \circ \mathbf{B}_1, \mathbf{A}_1 \circ \mathbf{B}_0, \mathbf{A}_1 \circ \mathbf{B}_1$ 的线性组合来获得。线性组合的过程只涉及到 element-wise 加法和数乘。
 3. CUDA kernerls for element-wise operations: 现有的CUDA kernerls可以支持整数上的element-wise加法和数乘。
 
 为了实现双线性操作 $\circ$, 例如矩阵乘法和卷积，CryptGPU首先将输入矩阵 $\mathbf{A}, \mathbf{B} \in \mathbb{Z}_{2^{64}}^{n\times m}$ 分解为数值范围小的若干个矩阵组合 $\mathbf{A}_1,...,\mathbf{A}_k$ 和 $\mathbf{B}_1,...,\mathbf{B}_k \in \mathbb{Z}_{2^w}^{n\times m}$，满足 $\mathbf{A}=\sum_{i=1}^k 2^{(i-1)w}\mathbf{A}_i$ 和 $\mathbf{B}=\sum_{i=1}^k 2^{(i-1)w}\mathbf{B}_i$。进一步，利用浮点数CUDA kernerls在GPU上求$k^2$个$\mathbf{A}_i \circ \mathbf{B}_j$。因为$\mathbf{A}_i \circ \mathbf{B}_j$ 的取值范围不会超过 $2^{52}$，这些中间结果都可以准确计算。最终，这些成对的乘积被重新解释编码为64比特的整数。如此，$\mathbf{A} \circ \mathbf{B}$ 可以通过 $\mathbf{A}_i\circ \mathbf{B}_j$ 的线性组合计算得到。因为最终的结果需要模 $2^{64}$，所以只需要计算下标满足 $w(i+j-2)<64$ 的 $\mathbf{A}_i\circ \mathbf{B}_j$。在计算浮点数卷积的时候，CryptGPU取 $k=4, w=16$。如此每个双线性计算被分解为10个成对的双线性积。另外，有如下三个Remark:
